fixed spacing on home

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -33,6 +33,8 @@
    --font-mono: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;
    
    --main-bg: linear-gradient(90deg, rgba(14,21,58,1) 0%, rgba(15,74,101,1) 26%, rgba(15,108,129,1) 43%, rgba(16,224,224,1) 100%);
+   --bg-scroll: linear-gradient(180deg, #0f4a65 0%, #80d0c7 100%);
+
    --bg2: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
    --bg3: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
    --bg3-1: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -70,6 +72,30 @@
 
 /* ////////////HOME//////////////// */
 
+/* html {
+   scrollbar-width: thin;
+    scrollbar-color: var(--dark-slate) var(--navy);
+} */
+
+
+
+::-webkit-scrollbar {
+   width: 5px;    
+   border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--bg-scroll);
+    rotate: rotateX('180deg');
+
+}
+
+/* Make scrollbar handle transparent and cover external space */
+::-webkit-scrollbar-thumb {
+    background: transparent;
+    box-shadow: 0px 0px 0px 100000vh black;
+}
+
 .Main {
    height: 300vh;
    scroll-behavior: smooth;
@@ -78,6 +104,8 @@
 body {
    background-color: var(--on-primary);
    color: var(--white);
+   /* line-height: 1.3px; */
+
 }
 
 .home {
@@ -220,6 +248,9 @@ main {
 }
 
 aside.left {
+   display:flex;
+   flex-direction: column;
+   align-items: center;
    width: 40px;
    position: fixed;
    bottom: 0px;
@@ -230,7 +261,19 @@ aside.left {
 }
 
 aside.left a {
-   padding-bottom: 10px;
+   padding: 10px; 
+}
+
+aside.left a img{
+   width: 20px;
+   height: 20px;
+   fill: var(--slate);
+}
+
+aside.left a svg {
+   color: var(--slate);
+   width: 20px;
+   height: 20px;
 }
 
 div.vertical {
@@ -256,7 +299,7 @@ section.main_section {
 section.home {
    margin: auto;
    display: flex;
-   padding: 100px 200px 0 0;
+   padding: 175px 0px 0 0;
    flex-direction: column;
    position: relative;
 }
@@ -265,9 +308,10 @@ p.short-intro {
    color:var(--slate);
    font-family: var(--font-sans);
    font-size: var(--fz-xl);
-   line-height: 20px;
+   /* line-height: 20px; */
    word-spacing: 0px;
    color: var(--slate);
+   line-height: 1.3;
    
 }
 
@@ -307,6 +351,11 @@ button.get-in-touch:hover {
 @media (max-width: 1080px) {
    nav{
         padding: 0px 40px ;
+   }
+
+   aside.left {
+      left: 20px;
+      right: auto;
    }
 }
 
